--- a/markup/components/profile-card/profile-card.styl
+++ b/markup/components/profile-card/profile-card.styl
@@ -2,7 +2,14 @@
     position: relative
     display: block
     padding-top 46px
-    overflow: hidden
+
+    > .badges
+        overflow: hidden
+        height: 36px
+
+        .badges__badge
+            display: inline-block
+            height: 24px
 
     &__container
         padding: 0 40px
