--- a/markup/components/rating/rating.styl
+++ b/markup/components/rating/rating.styl
@@ -26,7 +26,7 @@
         fill: #e6e6e6
 
         &:not(:last-child)
-            margin-right: 8px
+            margin-right: 9px
 
         &_active
             fill: mainColor
@@ -52,20 +52,22 @@
         align-items: center
 
         &:not(:last-child)
-            margin-bottom: 25px
+            margin-bottom: 29px
 
     &__dropdown
         opacity: 0
         pointer-events: none
-        padding: 25px
+        padding: 36px 44px
+        margin-top: 26px
         position: absolute
         top: 100%
-        left: 0
+        left: -5px
         display: block
-        width: 100%
+        width: calc(100% + 15px)
         background-color: darkGreyColor
         transition(opacity)
         z-index: 10
+        box-shadow 0 10px 40px 0 rgba(29, 29, 29, .1)
 
         &::before
             triangle(darkGreyColor, up)
@@ -93,5 +95,6 @@
         font-weight 400
         text-transform uppercase
         color: #878889
-        width: 62px
-        ellipsis(62px)
+        width: 75px
+        ellipsis(75px)
+        letter-spacing 1px
