--- a/markup/components/rating/rating.styl
+++ b/markup/components/rating/rating.styl
@@ -3,8 +3,9 @@
     display: flex
     justify-content: space-between
     align-items: center
+    cursor pointer
 
-    &:hover > &__dropdown
+    &.active &__dropdown
         opacity: 1
         pointer-events all
 
