--- a/markup/components/profile-photo-popup/profile-photo-popup.styl
+++ b/markup/components/profile-photo-popup/profile-photo-popup.styl
@@ -144,6 +144,7 @@
     &__thumbs
         margin-top: auto
         display: block
+        flex-shrink: 0
 
         +below(1024px)
             display: none
