--- a/markup/components/profile-photo-popup/profile-photo-popup.pug
+++ b/markup/components/profile-photo-popup/profile-photo-popup.pug
@@ -11,25 +11,28 @@ mixin profile-photo-popup()
             ];
         +b.profile-photo-popup&attributes(attributes)
             +popup-close.popup__close_kind_square.popup__close_no_translate
-            +e.gallery.swiper-container
-                +e.UL.gallery-items.swiper-wrapper
-                    each photo in photos
-                        +e.LI.gallery-item.swiper-slide
-                            +e.gallery-img-wrap
-                                +e.IMG(src=`__static__img/content/photo-popup/gallery/${photo}.jpg` alt='').gallery-img
-                            +e.footer
-                                +e.A(href='#').like
-                                    != pugHelpers.Icon.call(locals, {iconName: 'like', className: 'profile-photo-popup__like-icon', iconWidth: 13, iconHeight: 11})
-                                    +e.SPAN.link Like
+            +e.container
+                +e.gallery.swiper-container
+                    +e.UL.gallery-items.swiper-wrapper
+                        each photo, index in photos
+                            +e.LI.gallery-item.swiper-slide(data-likes=Math.ceil(Math.random() * 100) data-liked=(Math.random() > 0.5).toString())
+                                +e.IMG(src=`__static__img/content/photo-popup/gallery/${photo}.jpg`).gallery-img
 
-                                +e.links
-                                    +e.A(href='#').link Share
-                                    +e.A(href='#').link Report
+                    +e.button._prev
+                        != pugHelpers.Icon.call(locals, {iconName: 'photo-caret', className: 'profile-photo-popup__caret-icon'})
+                    +e.button._next
+                        != pugHelpers.Icon.call(locals, {iconName: 'photo-caret', className: 'profile-photo-popup__caret-icon'})
 
-                +e.button._prev
-                    != pugHelpers.Icon.call(locals, {iconName: 'caret', className: 'profile-photo-popup__caret-icon', iconWidth: 22, iconHeight: 11})
-                +e.button._next
-                    != pugHelpers.Icon.call(locals, {iconName: 'caret', className: 'profile-photo-popup__caret-icon', iconWidth: 22, iconHeight: 11})
+                +e.footer
+                    +e.A(href='#').like.js-like-photo
+                        != pugHelpers.Icon.call(locals, {iconName: 'like-stroke', className: 'profile-photo-popup__like-icon profile-photo-popup__like-icon_stroke',iconWidth: 17,iconHeight: 16})
+                        != pugHelpers.Icon.call(locals, {iconName: 'like-fill', className: 'profile-photo-popup__like-icon profile-photo-popup__like-icon_fill',iconWidth: 17,iconHeight: 16})
+                        +e.SPAN.count.js-likes-count
+                        +e.SPAN.link Like
+
+                    +e.links
+                        +e.A(href='#' data-popup-id='#profile-share' data-action='show').link.js-toggle-popup Share
+                        +e.A(href='#' data-popup-id='#profile-report' data-action='show').link.js-toggle-popup Report
 
             +e.thumbs.swiper-container
                 +e.UL.thumbs-items.swiper-wrapper
