--- a/markup/components/profile-photo-popup/profile-photo-popup.styl
+++ b/markup/components/profile-photo-popup/profile-photo-popup.styl
@@ -41,15 +41,33 @@
         font-weight 400
         text-decoration: none
 
+    &__count
+        color: #fff
+        margin-right: 13px
+        font-size: 16px
+
+        &:empty
+            display: none
+
     &__like
         display: flex
         height: 100%
         align-items: center
         text-decoration: none
 
+        &.active
+            & ^[0]__like-icon
+                &_stroke
+                    display: none
+                &_fill
+                    display: block
+
         &-icon
             fill: #fff
-            margin-right: 13px
+            margin-right: 8px
+
+            &_fill
+                display: none
 
     &__links
         display: flex
@@ -87,7 +105,7 @@
                 transform: translate3d(-100%, 0, 0)
 
             & ^[0]__caret-icon
-                transform: rotate(-90deg)
+                transform: rotate(-180deg)
 
         &_next
             padding-right: 41px
@@ -99,7 +117,6 @@
 
             & ^[0]__caret-icon
                 margin-left: auto
-                transform: rotate(90deg)
 
     &__zoom-icon
         position: absolute
@@ -108,9 +125,8 @@
         opacity: 0
         transition(opacity)
 
-    &__gallery
-        margin-top: auto
-        margin-bottom: auto
+    &__container
+        margin: auto
         display: block
         max-width: 916px
         width: 100%
@@ -121,22 +137,27 @@
         +below(1024px)
             margin: auto
 
-        &-img
-            width: 100%
-            height: auto
-            pointer-events: all
+    &__gallery
+        width: 100%
 
-            &-wrap
-                +below(768px)
-                    display: flex
-                    flex: 1
-                    align-items: center
-                    pointer-events: none
+        +below(768px)
+            height: calc(100vh - 60px)
 
         &-item
-            +below(768px)
-                display: flex
-                flex-direction: column
+            background-color: darkGreyColor
+            display: flex
+            justify-content: center
+            align-items: center
+
+            +above(1024px)
+                max-height: 65vh
+
+        &-img
+            max-height: 100%
+            max-width: 100%
+            width: auto
+            height: auto
+            pointer-events: all
 
         &-items
             position: relative
@@ -145,12 +166,13 @@
         margin-top: auto
         display: block
         flex-shrink: 0
+        margin-bottom: 28px
 
         +below(1024px)
             display: none
 
         .swiper-wrapper
-            margin-left: calc(-50% + 187.5px) // 187.5px = (slide width) * 1.5
+            margin-left: calc(-50% + 62.5px) // 62.5px = (slide width) / 2
 
         &-item
             position: relative
