--- a/markup/components/list/list.styl
+++ b/markup/components/list/list.styl
@@ -1,4 +1,5 @@
 .list
+    position: relative
     display: block
 
     &_shadow
@@ -9,17 +10,25 @@
         cursor: pointer
 
         & > .list
-            display: none
+            position: absolute
+            top: 0
+            left: -100%
+            width: 100%
+            z-index: 50
+            box-shadow: 0 10px 40px rgba(29, 29, 29, .1)
+            opacity: 0
+            pointer-events: none
+            transition(opacity)
 
         &_dropdown
             & > ^[0]__button ^[0]__arrow
                 display: block
 
-            &:hover
-                & > .list
-                    display: block
+        &.active
+            & > .list
+                opacity: 1
+                pointer-events all
 
-        &:hover, &.active
             & > ^[0]__button
                 background-color: #f7f7f7
 
@@ -82,3 +91,4 @@
         bottom: 6px
         display: none
         z-index: 1
+        fill: mainColor
