fix links in header

--- a/markup/components/agency-card/agency-card.pug
+++ b/markup/components/agency-card/agency-card.pug
@@ -62,6 +62,6 @@ mixin agency-card-new(avatar, bg)
                 +short-info
                     +short-info-heading Phone
                     +short-info-content
-                        +short-info-text +44 3069—990852
+                        +short-info-text.A(href='tel://443069990852') +44 3069—990852
 
         +button()(href='#')._uppercase.hide-desktop view profile
