--- a/markup/pages/boost-account-success.pug
+++ b/markup/pages/boost-account-success.pug
@@ -9,7 +9,7 @@ include ../components/select-city-popup/select-city-popup
 include ../components/map/map
 
 block header
-    +header
+    +header(null, null, 'menu')
 
 block content
     +boost-account-success
