--- a/markup/pages/model-list-help.pug
+++ b/markup/pages/model-list-help.pug
@@ -8,7 +8,7 @@ include ../components/popup-welcome/popup-welcome
 include ../components/select-city-popup/select-city-popup
 
 block header
-    +header
+    +header(null, null, 'all escorts')
 
 block content
     +model-list(true)
