--- a/markup/pages/user-fill-profile.pug
+++ b/markup/pages/user-fill-profile.pug
@@ -10,7 +10,7 @@ include ../components/map/map
 include ../components/user-nav/user-nav
 
 block header
-    +header(null, true)
+    +header(null, true, 'menu')
     +user-nav-model(1)
 
 block content
