--- a/markup/pages/user-no-messages.pug
+++ b/markup/pages/user-no-messages.pug
@@ -9,8 +9,8 @@ include ../components/select-city-popup/select-city-popup
 include ../components/user-nav/user-nav
 
 block header
-    +header
-    +user-nav-model(3)
+    +header(null, null, 'menu', true)
+    +user-nav-user(3)
 
 block content
     +user-no-messages
