--- a/markup/pages/user-settings.pug
+++ b/markup/pages/user-settings.pug
@@ -9,7 +9,7 @@ include ../components/select-city-popup/select-city-popup
 include ../components/user-nav/user-nav
 
 block header
-    +header
+    +header(null, null, 'menu')
     +user-nav-model(2)
 
 block content
