--- a/markup/components/header/header.pug
+++ b/markup/components/header/header.pug
@@ -11,7 +11,11 @@ include ../city-list/city-list
 include ../selectbox/selectbox
 include ../user-dropdown-popup/user-dropdown-popup
 
-mixin header(dark, isGuest)
+mixin header(dark, isGuest, activeMenu, isUser)
+
+    - var getActive = function(candidate) { return activeMenu === candidate ? 'active' : ''};
+    - var avatar = isUser ? 'jackson.png' : 'navbar.png'
+    - var name = isUser ? 'Michael' : 'Megan'
     +b.HEADER.header&attributes(attributes)
         // DESKTOP NAVBAR
         +e.NAV.navbar._desktop
@@ -20,17 +24,17 @@ mixin header(dark, isGuest)
                     +navbar-link(href='index.html')
                         +logo
 
-                +navbar-item
+                +navbar-item(class=getActive('all escorts'))
                     +navbar-link(href='model-list.html')
                         +navbar-heading All Escorts
                         +navbar-description 44062
 
-                +navbar-item
+                +navbar-item(class=getActive('independent'))
                     +navbar-link(href='model-list.html')
                         +navbar-heading Independent
                         +navbar-description 41908
 
-                +navbar-item
+                +navbar-item(class=getActive('agencies'))
                     +navbar-link(href='agency-list.html')
                         +navbar-heading Agency's
                         +navbar-description 2154
@@ -94,13 +98,13 @@ mixin header(dark, isGuest)
 
                 else
                     // user is authorized
-                    +navbar-item._dropdown._profile
+                    +navbar-item._dropdown._profile(class=getActive('menu'))
                         +navbar-link-dropdown(href='#')._row._has_badge
                             +navbar-badge._top_right 2
                             +navbar-col
-                                +avatar('navbar.png')._size_small
+                                +avatar(avatar)._size_small
                             +navbar-col
-                                +navbar-heading Megan
+                                +navbar-heading=name
                                 +navbar-description menu
                         +navbar-dropdown
                             +navbar-items
@@ -170,17 +174,16 @@ mixin header(dark, isGuest)
                         != pugHelpers.Icon.call(locals, {iconName: 'list-view', className: 'navbar__icon_list-view', iconWidth: '22', iconHeight: '14'})
 
                 if isGuest
-                    // user is authorized
+                    // user isn't authorized
                     +navbar-item
                         +navbar-link(href='user-profile-feedbacks.html' data-popup-id='#auth-popup' data-action='show').js-toggle-popup
                             != pugHelpers.Icon.call(locals, {iconName: 'profile', className: 'navbar__icon_profile', iconWidth: '18', iconHeight: '17'})
                 else
-                    // user isn't authorized
-                    +navbar-item._profile
+                    // user is authorized
+                    +navbar-item._profile(class=getActive('menu'))
                         +navbar-link(href='#' data-popup-id='#user-dropdown-popup' data-action='toggle').js-toggle-popup
                             +navbar-badge._top_right 2
-                            +avatar('navbar.png')._size_small
-
+                            +avatar(avatar)._size_small
         +e.search-bar
             +search-bar()(class=!!dark ? '_dark' : '')._extended
 
