--- a/markup/pages/agency-list.pug
+++ b/markup/pages/agency-list.pug
@@ -9,7 +9,7 @@ include ../components/select-city-popup/select-city-popup
 include ../components/model-map/model-map
 
 block header
-    +header
+    +header(null, null, 'agencies')
 
 block content
     +agency-list
