--- a/markup/pages/boost-account.pug
+++ b/markup/pages/boost-account.pug
@@ -10,7 +10,7 @@ include ../components/map/map
 include ../components/user-nav/user-nav
 
 block header
-    +header
+    +header(null, null, 'menu')
     +user-nav-model(1)
 
 block content
