--- a/markup/pages/user-activity.pug
+++ b/markup/pages/user-activity.pug
@@ -9,7 +9,7 @@ include ../components/select-city-popup/select-city-popup
 include ../components/user-nav/user-nav
 
 block header
-    +header
+    +header(null, null, 'menu', true)
     +user-nav-user(2)
 
 block content
