--- a/markup/pages/user-profile-rate.pug
+++ b/markup/pages/user-profile-rate.pug
@@ -15,7 +15,7 @@ include ../components/reviews/reviews
 
 
 block header
-    +header
+    +header(null, null, 'menu')
     +user-nav-model(1)
 
 block content
