--- a/markup/components/profile-photo-popup/profile-photo-popup.pug
+++ b/markup/components/profile-photo-popup/profile-photo-popup.pug
@@ -31,7 +31,7 @@ mixin profile-photo-popup()
                         +e.SPAN.link Like
 
                     +e.links
-                        +e.A(href='#' data-popup-id='#profile-share' data-action='show').link.js-toggle-popup Share
+                        +e.A(href='#' data-popup-id='#profile-qr' data-action='show').link.js-toggle-popup Share
                         +e.A(href='#' data-popup-id='#profile-report' data-action='show').link.js-toggle-popup Report
 
             +e.thumbs.swiper-container
