--- a/markup/components/boost-preview/boost-preview.styl
+++ b/markup/components/boost-preview/boost-preview.styl
@@ -4,6 +4,10 @@
     width: 100%
     height: 100%
 
+    .badges {
+        overflow: hidden;
+    }
+
     &_interactive
         & ^[0]__content
             display: flex
