--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -24,15 +24,15 @@ mixin user-fill-profile(activeItem)
                 +e.sidebar
                     -
                         var menuItems = [
-                            { title: 'Photo & Video', href: 'user-fill-profile-ajax-1.html'},
-                            { title: 'Personal data', href: 'user-fill-profile-ajax-2.html'},
-                            { title: 'Availability', href: 'user-fill-profile-ajax-3.html'},
-                            { title: 'Contact', href: 'user-fill-profile-ajax-4.html'},
-                            { title: 'Rate', href: 'user-fill-profile-ajax-5.html'},
-                            { title: 'About me', href: 'user-fill-profile-ajax-6.html'},
-                            { title: 'Service', href: 'user-fill-profile-ajax-7.html'},
-                            { title: 'Tours', href: 'user-fill-profile-ajax-8.html'},
-                            { title: 'Get verified', href: 'user-fill-profile-ajax-9.html'}
+                            { title: 'Photo & Video', href: 'user-fill-profile-1.html'},
+                            { title: 'Personal data', href: 'user-fill-profile-2.html'},
+                            { title: 'Availability', href: 'user-fill-profile-3.html'},
+                            { title: 'Contact', href: 'user-fill-profile-4.html'},
+                            { title: 'Rate', href: 'user-fill-profile-5.html'},
+                            { title: 'About me', href: 'user-fill-profile-6.html'},
+                            { title: 'Service', href: 'user-fill-profile-7.html'},
+                            { title: 'Tours', href: 'user-fill-profile-8.html'},
+                            { title: 'Get verified', href: 'user-fill-profile-9.html'}
                         ];
 
                     +fill-profile-nav
