--- a/markup/components/boost-preview/boost-preview.pug
+++ b/markup/components/boost-preview/boost-preview.pug
@@ -15,7 +15,7 @@ mixin boost-preview(img, heading, description, credits, hasBtn)
                     +e.A(href='#').btn._main
                         span more
 
-                    +e.A(href='#').btn
+                    +e.A(href='boost-account-payment.html').btn
                         span Select
 
 mixin boost-preview-interactive(credits, money, badge, selected)
