--- a/markup/components/model-info-popup/model-info-popup.styl
+++ b/markup/components/model-info-popup/model-info-popup.styl
@@ -19,6 +19,7 @@ modelInfoPopupMediumXPadding = 18px
     &.active
         transform: translate(-50%, -4px)
         opacity: 1;
+        pointer-events all
 
     &::before
         content: ''
