--- a/markup/components/photo-tape/photo-tape.pug
+++ b/markup/components/photo-tape/photo-tape.pug
@@ -5,7 +5,7 @@ mixin photo-tape()
         .swiper-container
             +e.UL.items.swiper-wrapper
                 +e.LI.item.swiper-slide
-                    +e.A.link(href='#')
+                    +e.A.link(href='boost-account.html')
                         +e.IMG(src=`%=static=%img/content/photo-tape/11.jpg` alt=`Model 1`).photo
                         +e.SPAN.badge
                         +e.SPAN.text put me here
