--- a/markup/components/photo-tape/photo-tape.styl
+++ b/markup/components/photo-tape/photo-tape.styl
@@ -30,7 +30,7 @@ photoTapeItemWidthMobile = 60px
         text-decoration: none
         font-size: 0
 
-        &:hover
+        &:hover, &.active
             & ^[0]__photo
                 opacity: .5
 
