--- a/markup/components/button/button.styl
+++ b/markup/components/button/button.styl
@@ -10,6 +10,7 @@
     cursor pointer
     letter-spacing 1px
     color: darkGreyColor
+    iziAnimation()
 
     &_inline
         display: inline-block
