--- a/markup/components/vip/vip.pug
+++ b/markup/components/vip/vip.pug
@@ -9,4 +9,4 @@ mixin vip(masonry)
             +e.SPAN.heading Your VIP profile
             +e.P.text Only
             +e.P.text 80 $ / month
-        +button()(href='#')._uppercase._bg_darkGrey._color_main <b>Become a VIP</b>
+        +button().DIV._uppercase._bg_darkGrey._color_main.__button <b>Become a VIP</b>
