--- a/markup/components/boost/boost.styl
+++ b/markup/components/boost/boost.styl
@@ -2,6 +2,16 @@
     max-width 258px
     border 1px solid borderColor
     display block
+    iziAnimation()
+    cursor: pointer
+
+    &.active, &:hover
+        & ^[0]__button
+            border-top-color: transparent !important
+            color: #fff
+
+        & ^[0]__icon
+            background-color: darkGreyColor
 
     &_masonry
         margin-left: auto
@@ -24,6 +34,7 @@
         background-color mainColor
         text-align center
         border-radius 50%
+        transition: background-color .25s cubic-bezier(0.7,0,0.9,1)
 
         svg
             height 100%
@@ -42,3 +53,6 @@
 
     &__button
         border-top-color borderColor !important
+
+        &::after
+            display: none !important
