--- a/markup/components/vip/vip.styl
+++ b/markup/components/vip/vip.styl
@@ -4,6 +4,16 @@
     max-width 258px
     min-height 400px
     background-color darkGreyColor
+    iziAnimation()
+    cursor: pointer
+
+    &.active, &:hover
+        & ^[0]__button
+            border-top-color: transparent !important
+            color: #fff
+
+        & ^[0]__icon
+            background-color: darkGreyColor
 
     &_masonry
         margin-left: auto
@@ -34,6 +44,7 @@
         text-transform uppercase
         border-radius: 50%
         margin-top: 20px
+        transition: background-color .25s cubic-bezier(0.7,0,0.9,1)
 
     &__heading
         color #fff
@@ -52,7 +63,11 @@
         font-weight 400
         line-height 21/18
 
-    .button
+    &__button
         margin-top: auto
         border-top-color: rgba(borderColor, .08)
         flex-shrink: 0
+        background-color: transparent
+
+        &::after
+            display: none !important
