--- a/markup/components/vip/vip.styl
+++ b/markup/components/vip/vip.styl
@@ -6,6 +6,7 @@
     background-color darkGreyColor
     iziAnimation()
     cursor: pointer
+    text-decoration: none
 
     &.active, &:hover
         & ^[0]__button
